Mon Jun 14 15:01:07 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Document.cc(RetrieveHTTP): Show "Unknown host" message if
	Connection::assign_server() fails (due to gethostbyname() failure).

Mon Jun 14 13:52:34 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/defaults.cc, htsearch/Display.h, htsearch/Display.cc,
	htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html,
	htdoc/hts_templates.html: add template_patterns attribute, to select
	result templates based on URL patterns.

Sun Jun 13 16:29:19 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/Retriever.cc (IsValidURL): Add valid_extension list, as
	requested numerous times.

	* htcommon/defaults.cc: Add config attribute valid_extensions,
	with default as empty.

Sat Jun 12 23:10:39 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htcommon/DocumentRef.h: Fix thinkos introduced in change earlier
	today. Actually compiles correctly now.

Sat Jun 12 22:37:22 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/HtHTTP.cc (ParseHeader): Fix parsing to take empty headers
	into account. Fixes PR#557.

	* htsearch/Display.h, htsearch/Display.cc (excerpt): Fix
	declaration to refer to first as reference--ensures ANCHOR is
	properly set. Fixes PR#541 as suggested by <pmb1@york.ac.uk>.

	* htfuzzy/Endings.cc (getWords): Fixed PR#560 as suggested by
	Steve Arlow <yorick@ClarkHill.com>. Solves problems with fuzzy
	matching on words like -ness: witness, highness, likeness...

	* installdir/search.html (Match): Add Boolean to default search
	form, as suggested by PR#561.

	* htlib/URL.cc (URL): Fix PR#566 by setting the correct length of
	the string being matched. 'http://' is 7 characters...

Sat Jun 12 19:06:36 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htlib/HtZlibCodec.h, htlib/HtZlibCodec.cc: New files. Provide
	general access to zlib compression routines when available.

	* htcommon/DocumentRef.h, htcommon/DocumentRef.cc: Remove